--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,10 @@ h1 {
 .strike {
   text-decoration: line-through;
 }
+
+.calendar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-right: 30px;
+}
