--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 body {
-  margin: 0;
-  margin-left: 30px;
+  margin: 30px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -15,15 +16,17 @@ code {
 
 h1 {
   text-align: center;
+  font-family: 'Bebas Neue', cursive;
 }
 
 .tasks-list {
   display: flex;
   justify-content: space-between;
+  font-family: 'Courier New';
 }
 
 .add-task {
-  margin-right: 30px;
+  font-family: 'Courier New';
 }
 
 .strike {
@@ -34,5 +37,14 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin-right: 30px;
+  background-color: azure;
+  font-family: Monaco;
+  font-size: 12px;
+}
+
+.month {
+  font-family: Monaco;
+  margin-left: 13px;
+  margin-bottom: 20px;
+  color: lightskyblue;
 }
